# heart-failure-prediction

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dvc_test.txt.dvc  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml
conf/: config.yaml
conf/hydra/sweeper/: optuna_custom.yaml
conf/model/: adaboost.yaml  logistic_regression.yaml  random_forest.yaml  xgboost.yaml
conf/tuning/: logistic_regression.yaml  xgboost.yaml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: SliderInput.jsx
frontend/src/components/ui/: slider.jsx
models/: model.joblib.dvc
models/explainer_artifact/: explainer.joblib.dvc  feature_names.joblib.dvc
notebooks/: 01_eda.ipynb
src/heart_failure_prediction/: dataset.py  export_model.py  plots.py  preprocessing.py  train.py
src/heart_failure_prediction/serving/: app.py
tests/: test_api.py  test_preprocessing.py  test_train.py
