[project]
name = "heart-failure-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "jarzeckil",email = "jarzeckil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "dvc (>=3.64.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "ruff (>=0.14.9,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "mlflow (>=3.7.0,<4.0.0)",
    "hydra-optuna-sweeper (>=1.2.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "heart_failure_prediction", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]

[tool.ruff.lint]
# Select which rule categories are enabled
# (E: pycodestyle errors, F: pyflakes, I: import-related, B: bugbears, UP: plugins)
select = ["E", "F", "I", "UP", "B"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
known-first-party = ["heart_failure_prediction"]
# Force sorting within each import section
force-sort-within-sections = true

[dependency-groups]
dev = [
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
